fix: add gap between feedback buttons

--- a/src/components/Feedback/Feedback.scss
+++ b/src/components/Feedback/Feedback.scss
@@ -20,6 +20,7 @@ $popupWidth: 320px;
             display: flex;
             align-items: center;
             flex-direction: column;
+            gap: 10px;
             width: 100%;
         }
     }
